[feat][static it girl]: add fashion it girl page

--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -9,6 +9,10 @@
         padding: 0;
       }
 
+      .color-baby-pink {
+        background-color: #fdebf3;
+      }
+
       .color-beige {
         background-color: #efdecd;
       }
