--- a/app/views/statics/fashion_it_girl.html.slim
+++ b/app/views/statics/fashion_it_girl.html.slim
@@ -1,38 +1,171 @@
-div
-	.grid-container
-		.grid-3 style="background-color:#CEB6CB;margin-top:40px;height:159px"
-		    p
-		    	= image_tag('fashion-it-girl/fashion_it_girl_logo_banner.jpg', :alt => 'Fame & Partners and ASOS Present', :height => 164)
+.fashion-it-girl-winner
+	.top-bar
+	.container-fluid.no-padding
+		.row
+			.col-md-4.no-padding-top
+				.col-md-12
+					.ribbon
+						h1
+							| Fashion<br>
+							span it Girl
+						h2.winner 2015 winner
+						h2.name Sophie MacMillan
+						p Summit high school (nj)
+			.col-md-8.banner
+	.bottom-bar
+		.col-md-5.col-md-offset-4
+			.blogger
+			span &nbsp;theadventuresofs.blogspot.com
+		.col-md-3
+			.instagram
+			span &nbsp;@theadventuresofs
 
-		    /p style="margin-top:40px; min-height:1000px"
-		    /	 = image_tag('fashion-it-girl/fashion_it_girl_banner.gif', :alt => 'Limited time shop now', :width => 285)
-		    	/ = image_tag('fashion-it-girl/fashion_it_girl_sale_banner.gif', :alt => 'Limited time shop now', :width => 285)
+	.container-fluid.mavens
+		.row.center
+			.text-center
+				h2
+					| Fashion
+					span <br>Mavens
+				.row
+					.maven.col-md-2.col-md-offset-1
+						.photo
+							= image_tag("fashion-it-girl/emma-lenhart.png")
+						.name Emma Lenhart
+						.social
+							i.fa.fa-instagram
+							a href="https://instagram.com/emma_lenhart"&nbsp;@emma_lenhart
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/monica-eserjose.png")
+						.name Monica Eserjose
+						.social
+							i.fa.fa-instagram
+							a href="https://instagram.com/monicaessi"&nbsp@monicaessi
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/samantha-zirin.png")
+						.name Samantha Zirin
+						.social
+							a href="http://www.daughterruns.com/" daughterruns.com
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/tyler-hooks.png")
+						.name tyler hooks
+						.social
+							a href="http://issuu.com/tylerhooks" issuu.com/tylerhooks
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/cassy-stone.png")
+						.name Cassy Stone
+						.social
+							a href="http://poshandcircumstance.com/" poshandcircumstance.com
 
-		.grid-9
-			- if current_site_version.is_usa?
-				script type="application/javascript" src="//s.uadx.com/4505c140-79a4-11e4-88aa-22000afe405e.js"
-				div class="wishpond-campaign" data-wishpond-id="487301" data-wishpond-href="https://www.wishpond.com/lp/487301"
+				.row
+					.maven.col-md-2.col-md-offset-1
+						.photo
+							= image_tag("fashion-it-girl/em-con.png")
+						.name Em Con
+						.social
+							i.fa.fa-instagram
+							a href="https://instagram.com/emcon111"&nbsp@emcon111
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/madeline-sipp.png")
+						.name Madeline Sipp
+						.social
+							i.fa.fa-pinterest-p
+							a href="https://www.pinterest.com/MadelineSipp/"&nbsp/MadelineSipp
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/halimah-muhammad.png")
+						.name Halimah Muhammad
+						.social
+							a href="http://www.halimahnia.com" HalimahNia.com
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/claudia-caracciolo.png")
+						.name claudia caracciolo
+						.social
+							i.fa.fa-instagram
+							a href="https://instagram.com/claudiacaracciolo" &nbsp@claudiacaracciolo
+					.maven.col-md-2
+						.photo
+							= image_tag("fashion-it-girl/rachel-tu.png")
+						.name Rachel Tu
+						.social
+							a href="http://cargocollective.com/racheltu" cargocollective.com/racheltu
 
-			    javascript:
+	.container-fluid.ambassadors
+		.container
+			.row
+				h2.text-center
+					| Fashion
+					span <br>Ambassadors
 
-			    	setTimeout(function() {
-			    		if (typeof _gaq != "undefined") {
-			    			_gaq.push(['_trackEvent', '10_seconds', 'read']);
-			    		}
-			    	},10000);
+				.col-md-3
+					ul
+						li.name Sara Wong
+						li.name Shannyn Schack
+						li.name Hailey Heavens
+						li.name Fariha Ahmed
+						li.name Taylor Gerardi
+						li.name Lily Sperry
+						li.name Nayibe Nassar
+						li.name Alyssa Lopez
+						li.name Milan Wheaton
+						li.name Emily Neff
+						li.name Madison Olszewski
+						li.name Emily Martese
+						li.name Emily Ehardt
 
-					(function() {
-					 window.Wishpond = window.Wishpond || {};
-					 Wishpond.merchantId = '514769';
-					})()
+				.col-md-3
+					ul
+						li.name Hannah Del Rey
+						li.name Ashley LeHaf
+						li.name Emily Cohen
+						li.name Juliana Valencia
+						li.name Kirsteen Xynea Bueno
+						li.name Jessie Jurman
+						li.name Grace Dixon
+						li.name Aleena Raza
+						li.name Joyce Chan
+						li.name Alice Lee
+						li.name Alice Liang
+						li.name Trinity Mack
 
-				script type="text/javascript" src="//cdn.wishpond.com/master.js"
+				.col-md-3
+					ul
+						li.name Melon Wong
+						li.name Kayla Campbell
+						li.name Nathalie Fernandez
+						li.name Julia Levin
+						li.name Juliana Arrington
+						li.name Jordan Metz
+						li.name Morgan Zakarin
+						li.name Anna Benzin
+						li.name Adriana Hoeffner
+						li.name Anai Reyes
+						li.name Shayna Mae Arana
+						li.name Reanna Gross
 
-			- else
-				= image_tag('https://s3.amazonaws.com/media.wishpond.com/media/003/635/018/original.jpg?1420597537', :alt => "Fashion IT Girl 2015", :style => "background-color:#CEB6CB;margin-top:40px;height:159px")
+				.col-md-3
+					ul
+						li.name Lulé Karpuzi
+						li.name Vanessa Smith
+						li.name Monica Lang
+						li.name Brianna Palmer
+						li.name Mikaylah Sayles
+						li.name Emilee Carr
+						li.name Sachindara Navinna
+						li.name Emily Messing
+						li.name Erin Jacobsen
+						li.name Allison Clausius
+						li.name Joslyn DeNorio
+						li.name Ria Anasagasti
+						li.name Sara Hudson
 
-				div style="margin-left:50px;margin-top:40px;"
-					h1
-						' Sorry, but the Fashion IT Girl 2015 competition is only open to US residents.
-					p Australia's Fashionista Search will be launching in April 2015.
-					p Stay tuned or contact us to register your interest.
+	.container-fluid.register
+		p.senior Will you be a high school senior next year?
+		p.register-now register now &amp; you could be crowned 2016 it girl
+		a href="mailto:fashionitgirl@fameandpartners.com?Subject=I%20want%20to%20be%20the%202016%20Fashion%20IT%20Girl!"
+			button.register-btn.btn  Register
