--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -2,6 +2,7 @@
 
 @import 'redesign/vars';
 @import 'redesign/mixins';
+@import "font-awesome-sprockets";
 @import "font-awesome";
 
 @import 'libs/vex.css';
@@ -39,6 +40,7 @@
 @import 'redesign/stories-images';
 @import 'redesign/login';
 @import 'redesign/sale_lp';
+@import 'redesign/fashion-it-girl-winner';
 
 @import 'redesign/checkout';
 @import 'redesign/cart';
