--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -19,7 +19,7 @@ h2.text-center Easy Size &amp; Measurement Guide
     table.table
       thead
         tr
-          th colspan='2' Sizes
+          th colspan='3' Sizes
           th colspan="2" Bust
           th colspan="2" Waist
           th colspan="2" Hip
@@ -27,6 +27,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td.sub-heading Aus/UK
           td.sub-heading US
+          td.sub-heading DE
           td.sub-heading cm
           td.sub-heading Inches
           td.sub-heading cm
@@ -36,6 +37,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 4
           td 0
+          td 32
           td 81
           td 32
           td 60
@@ -45,6 +47,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 6
           td 2
+          td 34
           td 84
           td 33
           td 63
@@ -54,6 +57,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 8
           td 4
+          td 36
           td 87
           td 34
           td 66
@@ -63,6 +67,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 10
           td 6
+          td 38
           td 92
           td 36
           td 71
@@ -72,6 +77,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 12
           td 8
+          td 40
           td 97
           td 38
           td 78
@@ -81,6 +87,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 14
           td 10
+          td 42
           td 102
           td 40
           td 85
@@ -90,6 +97,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 16
           td 12
+          td 44
           td 107
           td 42
           td 92
@@ -99,6 +107,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 18
           td 14
+          td 46
           td 112
           td 44
           td 99
@@ -108,6 +117,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 20
           td 16
+          td 48
           td 117
           td 46
           td 106
@@ -117,6 +127,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 22
           td 18
+          td 50
           td 122
           td 48
           td 113
@@ -126,6 +137,7 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 24
           td 20
+          td 52
           td 128
           td 50
           td 120
@@ -135,11 +147,10 @@ h2.text-center Easy Size &amp; Measurement Guide
         tr
           td 26
           td 22
+          td 54
           td 134
           td 53
           td 127
           td 50
           td 142
           td 56
-
-
