--- a/app/assets/stylesheets/redesign/fashion-it-girl-winner.css.scss
+++ b/app/assets/stylesheets/redesign/fashion-it-girl-winner.css.scss
@@ -14,6 +14,14 @@
     font-size: 22px;
     line-height: 60px;
     text-transform: uppercase;
+
+    @media(min-width: 991px) and (max-width: 1225px) {
+      font-size: 18px;
+    }
+
+    @media(min-width: 991px) and (max-width: 1037px) {
+      font-size: 16px;
+    }
   }
 
   .col-md-5, .col-md-5 {
@@ -30,6 +38,24 @@
     span {
       font-size: 36px;
     }
+  }
+
+  .fa-instagram, .fa-pinterest-p {
+    color: white;
+    font-size: 14px;
+    height: 20px;
+    width: 20px;
+    background-color: black;
+    border-radius: 50%;
+    line-height: 20px;
+  }
+
+  .instagram {
+    background-image: url('_icons/instagram-white.png');
+    width: 24px;
+    height: 24px;
+    float: left;
+    margin-top: 18px;
   }
 }
 
@@ -59,6 +85,14 @@
   padding-left: 4rem;
   padding-right: 4rem;
 
+  @media(max-width:990px) {
+    height: 580px;
+  }
+
+  @media(min-width: 1225px) {
+    max-width: 385px;
+  }
+
   h1 {
     margin-top: 0;
     padding-bottom: 0;
@@ -67,8 +101,21 @@
     font-size: 65px !important;
     line-height: 70px;
 
+    @media(min-width: 991px)  and (max-width: 1165px) {
+      font-size: 60px !important;
+      line-height: 65px;
+    }
+
+    @media(min-width: 650px)and (max-width: 990px) {
+      margin-left: 20%;
+    }
+
     span {
       font-size: 100px;
+
+      @media(min-width: 991px) and (max-width: 1165px) {
+        font-size: 70px;
+      }
     }
   }
 
@@ -80,6 +127,14 @@
     margin-top: -10px;
     font-weight: 300;
     font-size: 45px;
+
+    @media(min-width: 991px)and (max-width: 1165px) {
+      font-size: 40px;
+    }
+
+    @media(min-width: 650px)and (max-width: 990px) {
+      margin-left: 20%
+    }
   }
 
   h2.name {
@@ -90,11 +145,29 @@
     font-size: 55px;
     line-height: 45px;
     padding-top: 40px;
+
+    @media(min-width: 991px) and (max-width: 1165px) {
+      font-size: 50px;
+      line-height: 40px;
+      padding-top: 20px;
+    }
+
+    @media(min-width: 650px) and (max-width: 990px) {
+      margin-left: 20%;
+    }
   }
 
   p {
     font-weight: 400;
     font-size: 22px;
+
+    @media(min-width: 650px) and (max-width: 990px) {
+      margin-left: 30%;
+    }
+
+    @media(min-width: 991px) and (max-width: 1165px) {
+      font-size: 16px;
+    }
   }
 }
 
@@ -106,6 +179,10 @@
   position: absolute;
   top: 100%;
   width: 0;
+
+  @media(max-width: 990px) {
+    border-top:0;
+  }
 }
 
 .ribbon:after {
@@ -121,9 +198,25 @@
 .ambassadors {
   background-color: #fde6d8;
 
+  @media(max-width: 550px) {
+    ul {
+      padding: 0;
+    }
+  }
+
+  .container {
+    .col-md-3.col-xs-6 {
+      min-height: 380px;
+    }
+  }
+
   .name {
     text-align: left;
     text-transform: uppercase;
+
+    @media(max-width: 550px) {
+      text-align: center;
+    }
   }
 
   h2 {
@@ -137,6 +230,10 @@
 
 .mavens {
   background-color: #eeddf0;
+
+  @media(max-width: 550px) {
+    padding-top: 60px;
+  }
 }
 
 h2 span {
@@ -157,15 +254,7 @@ h2 span {
   }
 }
 
-.fa-instagram, .fa-pinterest-p {
-  color: white;
-  font-size: 14px;
-  height: 20px;
-  width: 20px;
-  background-color: black;
-  border-radius: 50%;
-  line-height: 20px;
-}
+
 
 .register {
   background-color: #013648;
@@ -181,6 +270,16 @@ h2 span {
     font-size: 45px;
     padding-top: 40px;
     margin-bottom: 0;
+
+    @media(max-width: 550px) {
+      font-size: 25px;
+      line-height: 30px;
+    }
+
+    @media(min-width: 551px) and (max-width: 800px) {
+      font-size: 30px;
+      line-height: 35px;
+    }
   }
 
   p.register-now {
@@ -188,6 +287,18 @@ h2 span {
     text-transform: uppercase;
     font-size: 45px;
     margin-top: -20px;
+
+    @media(max-width: 550px) {
+      margin-top: 10px;
+      font-size: 25px;
+      line-height: 30px;
+    }
+
+    @media(min-width: 551px) and (max-width: 800px) {
+      font-size: 30px;
+      line-height: 35px;
+      margin-top: 10px;
+    }
   }
 
   .btn:hover {
@@ -221,10 +332,19 @@ h2 span {
   margin-top: 18px;
 }
 
-.instagram {
-  background-image: url('_icons/instagram-white.png');
-  width: 24px;
-  height: 24px;
-  float: left;
-  margin-top: 18px;
+.ribbon-column {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.winner-image-mobile {
+  width: 173px;
+  height: 173px;
+  margin-left: auto;
+  margin-right: auto;
+
+  img{
+    width: 173px;
+    height: 173px;
+  }
 }
