--- a/app/views/statics/fashion_it_girl.html.slim
+++ b/app/views/statics/fashion_it_girl.html.slim
@@ -2,17 +2,19 @@
 	.top-bar
 	.container-fluid.no-padding
 		.row
-			.col-md-4.no-padding-top
-				.col-md-12
+			.col-md-4.col-sm-12.no-padding-top
+				.col-md-12.col-sm-12.ribbon-column
 					.ribbon
 						h1
 							| Fashion<br>
 							span it Girl
 						h2.winner 2015 winner
+						.winner-image-mobile.hidden-lg.hidden-md
+							= image_tag("fashion-it-girl/sophie-macmillan.jpg")
 						h2.name Sophie MacMillan
 						p Summit high school (nj)
-			.col-md-8.banner
-	.bottom-bar
+			.col-md-8.banner.hidden-sm.hidden-xs
+	.bottom-bar.hidden-sm.hidden-xs
 		.col-md-5.col-md-offset-4
 			.blogger
 			span &nbsp;theadventuresofs.blogspot.com
@@ -21,74 +23,73 @@
 			span &nbsp;@theadventuresofs
 
 	.container-fluid.mavens
-		.row.center
+		.center
 			.text-center
 				h2
 					| Fashion
 					span <br>Mavens
 				.row
-					.maven.col-md-2.col-md-offset-1
+					.maven.col-md-2.col-md-offset-1.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/emma-lenhart.png")
 						.name Emma Lenhart
 						.social
 							i.fa.fa-instagram
 							a href="https://instagram.com/emma_lenhart"&nbsp;@emma_lenhart
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/monica-eserjose.png")
 						.name Monica Eserjose
 						.social
 							i.fa.fa-instagram
 							a href="https://instagram.com/monicaessi"&nbsp@monicaessi
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/samantha-zirin.png")
 						.name Samantha Zirin
 						.social
 							a href="http://www.daughterruns.com/" daughterruns.com
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/tyler-hooks.png")
 						.name tyler hooks
 						.social
 							a href="http://issuu.com/tylerhooks" issuu.com/tylerhooks
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/cassy-stone.png")
 						.name Cassy Stone
 						.social
 							a href="http://poshandcircumstance.com/" poshandcircumstance.com
 
-				.row
-					.maven.col-md-2.col-md-offset-1
+					.maven.col-md-2.col-md-offset-1.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/em-con.png")
 						.name Em Con
 						.social
 							i.fa.fa-instagram
 							a href="https://instagram.com/emcon111"&nbsp@emcon111
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/madeline-sipp.png")
 						.name Madeline Sipp
 						.social
 							i.fa.fa-pinterest-p
 							a href="https://www.pinterest.com/MadelineSipp/"&nbsp/MadelineSipp
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/halimah-muhammad.png")
 						.name Halimah Muhammad
 						.social
 							a href="http://www.halimahnia.com" HalimahNia.com
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/claudia-caracciolo.png")
 						.name claudia caracciolo
 						.social
 							i.fa.fa-instagram
 							a href="https://instagram.com/claudiacaracciolo" &nbsp@claudiacaracciolo
-					.maven.col-md-2
+					.maven.col-md-2.col-xs-6
 						.photo
 							= image_tag("fashion-it-girl/rachel-tu.png")
 						.name Rachel Tu
@@ -97,72 +98,71 @@
 
 	.container-fluid.ambassadors
 		.container
-			.row
-				h2.text-center
-					| Fashion
-					span <br>Ambassadors
+			h2.text-center
+				| Fashion
+				span <br>Ambassadors
 
-				.col-md-3
-					ul
-						li.name Sara Wong
-						li.name Shannyn Schack
-						li.name Hailey Heavens
-						li.name Fariha Ahmed
-						li.name Taylor Gerardi
-						li.name Lily Sperry
-						li.name Nayibe Nassar
-						li.name Alyssa Lopez
-						li.name Milan Wheaton
-						li.name Emily Neff
-						li.name Madison Olszewski
-						li.name Emily Martese
-						li.name Emily Ehardt
+			.col-md-3.col-xs-6
+				ul
+					li.name Sara Wong
+					li.name Shannyn Schack
+					li.name Hailey Heavens
+					li.name Fariha Ahmed
+					li.name Taylor Gerardi
+					li.name Lily Sperry
+					li.name Nayibe Nassar
+					li.name Alyssa Lopez
+					li.name Milan Wheaton
+					li.name Emily Neff
+					li.name Madison Olszewski
+					li.name Emily Martese
+					li.name Emily Ehardt
 
-				.col-md-3
-					ul
-						li.name Hannah Del Rey
-						li.name Ashley LeHaf
-						li.name Emily Cohen
-						li.name Juliana Valencia
-						li.name Kirsteen Xynea Bueno
-						li.name Jessie Jurman
-						li.name Grace Dixon
-						li.name Aleena Raza
-						li.name Joyce Chan
-						li.name Alice Lee
-						li.name Alice Liang
-						li.name Trinity Mack
+			.col-md-3.col-xs-6
+				ul
+					li.name Hannah Del Rey
+					li.name Ashley LeHaf
+					li.name Emily Cohen
+					li.name Juliana Valencia
+					li.name Kirsteen Xynea Bueno
+					li.name Jessie Jurman
+					li.name Grace Dixon
+					li.name Aleena Raza
+					li.name Joyce Chan
+					li.name Alice Lee
+					li.name Alice Liang
+					li.name Trinity Mack
 
-				.col-md-3
-					ul
-						li.name Melon Wong
-						li.name Kayla Campbell
-						li.name Nathalie Fernandez
-						li.name Julia Levin
-						li.name Juliana Arrington
-						li.name Jordan Metz
-						li.name Morgan Zakarin
-						li.name Anna Benzin
-						li.name Adriana Hoeffner
-						li.name Anai Reyes
-						li.name Shayna Mae Arana
-						li.name Reanna Gross
+			.col-md-3.col-xs-6
+				ul
+					li.name Melon Wong
+					li.name Kayla Campbell
+					li.name Nathalie Fernandez
+					li.name Julia Levin
+					li.name Juliana Arrington
+					li.name Jordan Metz
+					li.name Morgan Zakarin
+					li.name Anna Benzin
+					li.name Adriana Hoeffner
+					li.name Anai Reyes
+					li.name Shayna Mae Arana
+					li.name Reanna Gross
 
-				.col-md-3
-					ul
-						li.name Lulé Karpuzi
-						li.name Vanessa Smith
-						li.name Monica Lang
-						li.name Brianna Palmer
-						li.name Mikaylah Sayles
-						li.name Emilee Carr
-						li.name Sachindara Navinna
-						li.name Emily Messing
-						li.name Erin Jacobsen
-						li.name Allison Clausius
-						li.name Joslyn DeNorio
-						li.name Ria Anasagasti
-						li.name Sara Hudson
+			.col-md-3.col-xs-6
+				ul
+					li.name Lulé Karpuzi
+					li.name Vanessa Smith
+					li.name Monica Lang
+					li.name Brianna Palmer
+					li.name Mikaylah Sayles
+					li.name Emilee Carr
+					li.name Sachindara Navinna
+					li.name Emily Messing
+					li.name Erin Jacobsen
+					li.name Allison Clausius
+					li.name Joslyn DeNorio
+					li.name Ria Anasagasti
+					li.name Sara Hudson
 
 	.container-fluid.register
 		p.senior Will you be a high school senior next year?
