--- a/app/views/spree/shipment_mailer/shipped_email.html.slim
+++ b/app/views/spree/shipment_mailer/shipped_email.html.slim
@@ -16,17 +16,17 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="600px"
               td.date style="color: #999; font: 400 12px/1.5 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif;"
                 = Date.today.to_formatted_s(:long)
             tr
-              td height="30"
+              td height="20"
             tr
-              td style="color: #000; font: 400 italic 38px/1.2 Georgia, 'Trebuchet MS', 'Times New Roman', sans-serif;"
+              td style="#{p_td_style}"
                 ' Hey #{order.first_name.rstrip},
             tr
-              td height="30"
+              td height="10"
             tr
               td style="#{p_td_style}"
                 p style="margin: 0;"
                 | We have some great news. Your dress has now been shipped and is on it's way to you.
-            tr : td height="20"
+            tr : td height="10"
             tr
               td
                 p style="#{p_td_style}"
@@ -64,7 +64,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="600px"
                   br
                   a href=shipment_tracking_url(@shipment)
                     = shipment_tracking_url(@shipment)
-            tr : td height="20"
+            tr : td height="10"
             tr
               td style="#{p_td_style}"
                 p style="margin: 0;"
