[fix] fixed broken 'quiz' stylesheets

--- a/app/assets/stylesheets/quiz.css.scss
+++ b/app/assets/stylesheets/quiz.css.scss
@@ -13,6 +13,7 @@
 @import 'libs/vex-theme-flat-attack.css';
 @import 'libs/vex-theme-bottom-right-corner.css';
 @import 'redesign/modal';
+@import 'redesign/icons';
 
 @import 'transient_content';
 
