--- a/app/views/spree/admin/orders/index.html.erb
+++ b/app/views/spree/admin/orders/index.html.erb
@@ -36,6 +36,7 @@
       <% end %>
       <th><%= sort_link @search, :projected_delivery_date, 'Projected Delivery' %> </th>
       <th><%= sort_link @search, :number,         t(:number, :scope => 'activerecord.attributes.spree/order') %></th>
+      <th><%= sort_link @search, :tracking,       'Tracking ' %></th>
       <th><%= sort_link @search, :state,          t(:state, :scope => 'activerecord.attributes.spree/order') %></th>
       <th><%= sort_link @search, :payment_state,  t(:payment_state, :scope => 'activerecord.attributes.spree/order') %></th>
       <% unless hide_line_items %>
@@ -62,6 +63,7 @@
         <% end %>
       </td>
       <td><%= link_to order.number, admin_order_path(order) %></td>
+      <td><%= order.shipments.first.tracking if order.shipments.any? %></td>
       <td class="align-center"><span class="state <%= order.state.downcase %>"><%= t("order_state.#{order.state.downcase}") %></span></td>
       <td class="align-center"><span class="state <%= order.payment_state %>"><%= link_to t("payment_states.#{order.payment_state}"), admin_order_payments_path(order) if order.payment_state %></span></td>
       <% unless hide_line_items %>
