[feat][campaign monitor] added some more fields

--- a/app/views/shared/_newsletter_signup.html.slim
+++ b/app/views/shared/_newsletter_signup.html.slim
@@ -1,3 +1,12 @@
+ruby:
+  details = Marketing::Subscriber.new(
+    site_version: current_site_version,
+    user: current_spree_user,
+    token: cookies['utm_guest_token'],
+    promocode: decode(params[:pc]),
+    ip_address: request.remote_ip
+  ).details
+
 #email-newsletter-signup
   .container-fluid
     .row
@@ -7,8 +16,15 @@
     form action="https://fameandpartners.createsend.com/t/t/s/ekjll/" method="post" class="form-inline"
       .form-group
         input#fieldEmail.form-control name="cm-ekjll-ekjll" type="email" placeholder="Enter email" /
-        input type="hidden" id="fieldurlkl" name="cm-fo-urlkl" value="190873"
-        input type="hidden" id="fieldqulir" name="cm-f-qulir" value=""
+        input type="hidden" id="fieldName"    name="cm-name" value=(current_spree_user.try(:full_name))
+        input type="hidden" id="fieldqulir"   name="cm-f-qulir" value=(details[:site_version])
+        input type="hidden" id="fieldjiktly"  name="cm-f-jiktly" value=(details[:country])
+        input type="hidden" id="fielddydhij"  name="cm-f-dydhij" value=(details[:promocode])
+        input type="hidden" id="fielddhhykd"  name="cm-f-dhhykd" value=(details[:referrer])
+        input type="hidden" id="fielddhhykh"  name="cm-f-dhhykh" value=(details[:campaign])
+        input type="hidden" id="fielddhhykk"  name="cm-f-dhhykk" value=(details[:ip_address])
+        input type="hidden" id="fieldurlkl"   name="cm-fo-urlkl" value="190873"
+        input type="hidden" id="fielddhhyuy"  name="cm-f-dhhyuy" value=(CampaignMonitor.current_version)
       span.submit.no-padding-right
         button.invis-fix.btn.btn-default type="submit" Send
 
