--- a/app/views/spree/admin/users/index.html.erb
+++ b/app/views/spree/admin/users/index.html.erb
@@ -11,13 +11,10 @@
 <%= render :partial => 'spree/admin/shared/user_sub_menu' %>
 
 <table class="index" id="listing_users" data-hook>
-  <colgroup>
-    <col style="width: 85%">
-    <col style="width: 15%">
-  </colgroup>
   <thead>
     <tr data-hook="admin_users_index_headers">
       <th><%= sort_link @search,:email, t(:user), {}, {:title => 'users_email_title'} %></th>
+      <th>Roles</th>
       <th data-hook="admin_users_index_header_actions" class="actions"></th>
     </tr>
   </thead>
@@ -25,6 +22,7 @@
     <% @users.each do |user|%>
       <tr id="<%= spree_dom_id user %>" data-hook="admin_users_index_rows" class="<%= cycle('odd', 'even')%>">
         <td class='user_email'><%=link_to user.email, object_url(user) %></td>
+        <td class='user_roles'><%= user.spree_roles.collect(&:name).join(', ') %></td>
         <td data-hook="admin_users_index_row_actions" class="actions">
           <%= link_to_edit user, :no_text => true %>
           <%= link_to_delete user, :no_text => true %>
