--- a/app/views/robots/production.text.erb
+++ b/app/views/robots/production.text.erb
@@ -18,4 +18,4 @@ Disallow: /account
 Disallow: /faqs
 Disallow: /terms
 
-Sitemap: http://www.fameandpartners.com/sitemap.xml.gz
+Sitemap: https://images.fameandpartners.com/sitemap/sitemap.xml.gz
