--- a/app/views/robots/staging.text.erb
+++ b/app/views/robots/staging.text.erb
@@ -3,4 +3,4 @@
 User-Agent: *
 Disallow: /
 
-Sitemap: http://www.fameandpartners.com/sitemap.xml.gz
+Sitemap: https://images.fameandpartners.com/sitemap/sitemap.xml.gz
