[fix] fix ball dresses URL on the header menu

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -97,7 +97,7 @@ ruby:
                         li.mega-menu-list--item
                           a href="/dresses/homecoming" Homecoming Dresses
                         li.mega-menu-list--item
-                          a href="/dresses/ball" Ball Dresses
+                          a href="/dresses/ball-gowns" Ball Dresses
                         li.mega-menu-list--item
                           a href="/dresses/sweet-16" Sweet 16 Dresses
                         li.mega-menu-list--item
