[feat] Add site_version to orders

--- a/app/views/spree/order_mailer/production_order_email.text.erb
+++ b/app/views/spree/order_mailer/production_order_email.text.erb
@@ -1,5 +1,6 @@
 Order Summary（订单信息）
 Order Number: <%= order.number %>
+Order Site:   <%= order.site_version %>
 Items:        <%= order.total_items %>
 
 ============================================================
@@ -37,4 +38,3 @@ Customer（客人名字): <%= order.name %>
 Phone Number（电话): <%= order.phone_number %>
 Shipping Address（地址): <%= order.shipping_address %>
 ============================================================
-
