--- a/app/views/spree/order_mailer/production_order_email.html.slim
+++ b/app/views/spree/order_mailer/production_order_email.html.slim
@@ -12,6 +12,9 @@ table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="
                   th Order Number:
                   td = order.number
                 tr
+                  th Order Site:
+                  td = order.site_version
+                tr
                   th Items:
                   td = order.total_items
 
