--- a/app/views/spree/admin/orders/index/_line_items.html.slim
+++ b/app/views/spree/admin/orders/index/_line_items.html.slim
@@ -6,7 +6,10 @@
     td class="align-center" = order.number
     td class="align-center" = order.shipments.first.tracking if order.shipments.any?
     td class="align-center" = ('A'..'Z').to_a[idx]
-    td class="align-center" = order_line_item.variant.sku
+    td class="align-center"
+      - if order.site_version
+        strong= "#{order.site_version}-"
+      = order_line_item.variant.sku
     td class="align-center" = render 'spree/admin/orders/index/update_fabrication_state_form', order_line_item: order_line_item
     td class="align-center" = order.shipments.select { |ship| ship.line_items.include?(order_line_item) }.first.try(:state)
     td
