[chore][product colours]: add more and update

--- a/app/assets/stylesheets/redesign/product/_product_colours.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product_colours.css.scss
@@ -10,7 +10,7 @@
       }
 
       .color-baby-pink {
-        background-color: #fdebf3;
+        background-color: #fde2f0;
       }
 
       .color-beige {
@@ -184,6 +184,10 @@
         background-color: #055281;
       }
 
+      .color-mauve {
+        background-color: #d4a8cc;
+      }
+
       .color-midnight-floral {
         background-image:url(product-color-images/midnightfloral.jpg);
         background-size:cover;
@@ -230,7 +234,7 @@
       }
 
       .color-pale-grey {
-        background-color:#e1dfdf;
+        background-color:#e0e1e1;
       }
 
       .color-pale-pink {
@@ -238,7 +242,7 @@
       }
 
       .color-pale-yellow {
-        background-color: #e3e7ba;
+        background-color: #f0f0ca;
       }
 
       .color-peach {
@@ -272,7 +276,7 @@
       }
 
       .color-purple {
-        background-color: #8e54cc;
+        background-color: #622b6f;
       }
 
       .color-red {
@@ -296,7 +300,7 @@
       }
 
       .color-seafoam {
-        background-color: #41cbb5;
+        background-color: #52d2c8;
       }
 
       .color-seashell {
@@ -305,6 +309,10 @@
 
       .color-silver {
         background-color: #A4A5A7;
+      }
+
+      .color-sky-blue {
+        background-color: #c2e4f4;
       }
 
       .color-taupe {
@@ -316,7 +324,7 @@
       }
 
       .color-turquoise {
-        background-color: #34DDDD;
+        background-color: #7deee5;
       }
 
       .color-watermelon {
