--- a/app/views/layouts/redesign/_head.html.slim
+++ b/app/views/layouts/redesign/_head.html.slim
@@ -20,10 +20,11 @@ meta property="og:site_name" content="Fame &amp; Partners"
 - else
   script src="//use.typekit.net/day0prb.js" type="text/javascript"
 
-- if Rails.env.production? || Features.active?(:test_analytics)
+- if Rails.env.production? || Features.active?(:test_analytics, current_spree_user)
   = render '/spree/shared/google_analytics'
   = render '/shared/zopim'
   = render '/shared/hotjar'
+  = render '/shared/customerio'
 
 script type="text/javascript"
   | try{Typekit.load();}catch(e){}
