--- a/app/views/spree/shared/_google_analytics.html.erb
+++ b/app/views/spree/shared/_google_analytics.html.erb
@@ -52,6 +52,7 @@
 <% if flash[:commerce_tracking] && @order.present? %>
   <!-- img src="<%= Marketing::RakutenTracker.new(@order, current_site_version).url %>" /-->
   <%= render :partial => 'spree/shared/rakuten' %>
+  <%= render :partial => 'spree/shared/customerio' %>
 <% end %>
 
 <%# fb tracking pixel %>
