--- a/app/views/spree/orders/show.html.slim
+++ b/app/views/spree/orders/show.html.slim
@@ -4,7 +4,7 @@
   - addthis_config['addthis:url'] = spree.product_url(product)
   - addthis_config['addthis:title'] = product.name
   - addthis_config['addthis:description'] = product.description
-
+- cart = @user_cart
 javascript:
   var addthis_config = {"data_track_addressbar":true};
 
@@ -16,13 +16,73 @@ ruby:
   .container
     .page-title--details
       - if successfully_ordered
-        h1.no-padding-bottom.text-white Thanks
+        h1.no-padding-bottom Thanks
       .subtitle We've received your order
 
 .page-content.user.order.show
   .container.relative
     .row
-      .col-md-4
+      .col-md-8.col-md-offset-2
+        .row
+          h2 YOUR ORDER DETAILS
+        .row
+          h2.order-number Your Order Number is: #{ @order.number }
+
+        table.table.order-items
+          thead
+            tr
+              th colspan="2" details
+              th colspan="1" quantity
+              th colspan="1" size
+              th colspan="1" price
+              th colspan="2" customisation
+              th colspan="1" total
+          tbody
+            - (cart.products || []).each do |product|
+              tr
+                td colspan="2"
+                  = image_tag product.image.large, class: 'img-responsive ordered-item-image'
+
+                td colspan="1"
+                  = "#{ product.quantity}"
+
+                td colspan="1"
+                  = product.size.name
+
+                td colspan="1"
+                  = product.price.display_price
+
+                td colspan="2"
+                  // TODO add customisation image here
+                td colspan="1"
+              tr.details
+                td colspan="1"
+                  = product.name
+                td colspan="1"
+                  = product.color.presentation
+                td colspan="3"
+                td colspan="1"
+                  - product.customizations.each do |customisation|
+                      = customisation.presentation
+                td colspan="1"
+                  - product.customizations.each do |customisation|
+                      = customisation.price.to_s
+                td colspan="1"
+                  // TODO add total of dress plus any additional charges for size colour or customisation
+            tr.total
+              td colspan="5"
+              td colspan="3"
+                p.title Order total
+                // TODO add order total
+            tr.address
+              td colspan="5"
+              td colspan="3"
+                p.title Your order will be delivered to
+                - address = @order.shipping_address
+                p = address.full_name
+                p = address.address1
+                p = "#{ address.city } #{ address.state_text }"
+                p = address.country.to_s
         .row
           p SHARE YOUR PURCHASE WITH YOUR FRIENDS SO NO ONE BUYS THE SAME DRESS FOR YOUR EVENT!
           .social.addthis_toolbox.addthis_default_style *addthis_config
@@ -32,58 +92,15 @@ ruby:
             a.addthis_counter.addthis_pill_style
           script src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f711fa532bc34ad"
 
-        .row
-          = render 'spree/orders/summary', cart: @user_cart
-
-      .col-md-8
-        h2 Order Number: #{ @order.number }
-        p Order Date: #{ l(@order.updated_at.to_date) }
-        h3 Shipping Address
-        - if address = @order.shipping_address
-          p = address.full_name
-          p = address.address1
-          p = "#{ address.city } #{ address.state_text }"
-          p = address.country.to_s
-        - else
-          p no shipping address
-
-        h3 Order Status
-        p.labeled = order_state(@order)
-        h3 Payment Status
-        p.labeled = order_payment_state(@order)
-        
-        - unless order_shipment_state(@order) == "ready"
-          h3 Delivery Status
-          p.labeled = order_shipment_state(@order)
-          - if @order.shipment
-            - if @order.shipment.is_dhl?
-              p
-                ' Track your order with DHL:
-                = link_to shipment_tracking_url(@order.shipment), target: '_blank' do
-                  DHL [#{ @order.shipment.tracking }]
-            - elsif @order.shipment.is_auspost?
-              p
-                ' Track your order with Australia Post:
-                = link_to shipment_tracking_url(@order.shipment), target: '_blank' do
-                  AUSPOST [#{ @order.shipment.tracking }]
-            - elsif @order.shipment.is_tnt?
-              p
-                ' Track your order with TNT:
-                = link_to shipment_tracking_url(@order.shipment), target: '_blank' do
-                  TNT [#{ @order.shipment.tracking }]
-            - else
-              h3 Tracking Number
-              p.labeled = @order.shipment.number
-
         - if successfully_ordered
           h3 Customer Support
-          p 
-            ' Check out our 
+          p
+            ' Check out our
             =' link_to 'Support Site', 'http://support.fameandpartners.com', target: '_blank'
-            ' or read our 
+            ' or read our
             =' link_to 'FAQs.', 'http://fameandpartners.com/faqs', target: '_blank'
           p Or otherwise contact our friendly team if you need any help.
           p = link_to 'team@fameandpartners.com', 'mailto:team@fameandpartners.com'
           - unless @order.user.blank?
-            .back-to-orders = link_to 'Your orders', user_orders_path, class: 'btn', remote: true
+            button.btn.back-to-orders = link_to 'Your orders', user_orders_path, class: 'btn', remote: true
           = render 'shared/sales_conversion_pixels', locals: {order: @order}
