[fix][admin] put js last, check for google existence
Google js appears to be blocked in China, which was breaking the admin
UI. This conditionally applies google maps when it is available.

--- a/app/views/spree/layouts/admin.html.erb
+++ b/app/views/spree/layouts/admin.html.erb
@@ -127,6 +127,7 @@
 
     <div data-hook="admin_footer_scripts"></div>
 
+    <%= render partial: '/spree/layouts/spree_admin_javascript' %>
 
   </body>
 </html>
